syntax = "proto3";

package mcp.v1;

option go_package = "./mcp";


service McpService {
    rpc CreateSession(CreateSessionRequest) returns (CreateSessionResponse);
    rpc GetSessionList(GetSessionListRequest) returns (GetSessionListResponse);
    rpc GetSession(GetSessionRequest) returns (GetSessionResponse);
    rpc DeleteSession(DeleteSessionRequest) returns (DeleteSessionResponse);
    rpc AppendMessage(AppendMessageRequest) returns (AppendMessageResponse);
}

message SessionInfo {
    string session_uuid = 1;
    string session_hint = 2;
}

message Message {
    string role = 1;
    string content = 2;
}

message CreateSessionRequest { uint64 user_id = 1; string hint = 2; }
message CreateSessionResponse { string session_uuid = 1; }

message GetSessionListRequest { uint64 user_id = 1; uint64 page = 2; uint64 page_size = 3; }
message GetSessionListResponse { repeated SessionInfo sessions = 1; uint64 total_page = 2;}

message GetSessionRequest { uint64 user_id = 1; string session_uuid = 2; }
message GetSessionResponse { SessionInfo session = 1;  repeated Message messages = 2;}

message DeleteSessionRequest { uint64 user_id = 1; string session_uuid = 2; }
message DeleteSessionResponse {  }

message AppendMessageRequest { uint64 user_id = 1; string session_uuid = 2; repeated Message messages = 3; }
message AppendMessageResponse {  }